[package]
name = "sfifo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
futures-util = "0.3"
inotify = "0.11"
nix = { version = "0.29", features = ["fs"] }
getset = "0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
libc = "0.2"
tokio-util = "0.7"
log = "0.4"

[dev-dependencies]
env_logger = "0.11"