[package]
name = "sfifo"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Rust library for managing FIFO (named pipe) files with advanced features including process authentication and deadlock prevention."
authors = ["jokemanfire <hu.dingyang@zte.com.cn>"]
repository = "https://github.com/jokemanfire/sfifo"

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
futures-util = "0.3"
inotify = "0.11"
nix = { version = "0.29", features = ["fs"] }
getset = "0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
libc = "0.2"
tokio-util = "0.7"
log = "0.4"

[dev-dependencies]
env_logger = "0.11"